@@ -6,12 +6,13 @@ AUX rudel-0.2.4-icons-dir.patch 503 RMD160 44b328338d2ae9b470a7954fc817cdbe7e6f5
 AUX rudel-0.2.4-require-cl.patch 455 RMD160 88298e4867f1a01800e4df00c4936aaf0f6c6b7f SHA1 f6c6b9ebdd407603d8d62371bd6669c0d982bec1 SHA256 263506e3ca3cee50e1ba1c420219f73ac44be0b52a74b7611f836c8440b5ae52
 DIST rudel-0.2-4.tar.gz 190557 RMD160 fd9a8053341876324b9f0ef0e3e020d47756e2f6 SHA1 26bb3af4b2accf67a3465b4e43d6548e2ce6a9bb SHA256 68247bfb702d929877f6d098932e8b0ca45c573a3510187e1ccc43e5ea194f25
 EBUILD rudel-0.2.4.ebuild 1235 RMD160 3ef29043b28371f134d1ec43f58b885e5d2071d0 SHA1 6463ba9d721608cae3f357807d94a5d4d312c09f SHA256 d767338de4b8bff51f78133def65d7a5b09d8286c058d19f123ca30bf9640178
-MISC ChangeLog 336 RMD160 48267715bd3ca3733852ba0e101c7e391e208a17 SHA1 645afa7505261e9942099c216cad6a4033be2f05 SHA256 accbd796b603a4583ddd099e388ab66d8586314abda7bddfe548f534bb08297f
+EBUILD rudel-9999.ebuild 1161 RMD160 95041cadd71bf2d01ee7e2c8aba96ce2b153f957 SHA1 fd129c1d685fea4c8d59185f577940713302f9bb SHA256 06fb7fc2140e9a722fc23283a7ffc01228b6de67c78bb92fda3f2d8f2070722a
+MISC ChangeLog 446 RMD160 0f19e8ef1e0f2679119451ba971d21ea9b2ff55e SHA1 985022510b5722e5a338f9785d484de948f5286a SHA256 e25a4e05dfa01d021edd5fa883876cebbef98f35fb52d6f3ea8226343ee2ff94
 MISC metadata.xml 584 RMD160 d455dbbf09ed0ba17af5164b7b632091e803ab13 SHA1 6547736b94d1944e7a6eba72534b9eb628b9f307 SHA256 674db47f62f67e1a500201c646e67436f1985e593e9d96a462b600f57aa08d96
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4ltiIACgkQOeoy/oIi7uwRSACfQohySM3jV4YUBVQoNrKhaJDE
-Nd0AnR5mw15A9rP1xYeBrdxmtwEhLyvR
-=EVit
+iEYEARECAAYFAk4luSIACgkQOeoy/oIi7uwFhQCgzcccqeAFXegZfUmwVGuDc+8r
+hkkAn0E95HO5M2m0ewxZMJO7JmRRnYtO
+=xu1U
 -----END PGP SIGNATURE-----
